gccida/g0/expand_nl_goto_receiver
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_nl_goto_receiver/src/stmt.c:4018:18: error: expected ')'
 struct rtx_def *arg_pointer_save_area; // rax 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_nl_goto_receiver/src/function.h:533:36: note: expanded from macro 'arg_pointer_save_area'
#define arg_pointer_save_area (cfun->x_arg_pointer_save_area)
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_nl_goto_receiver/src/stmt.c:4018:18: note: to match this '('
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_nl_goto_receiver/src/function.h:533:31: note: expanded from macro 'arg_pointer_save_area'
#define arg_pointer_save_area (cfun->x_arg_pointer_save_area)
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_nl_goto_receiver/src/stmt.c:4025:28: error: use of undeclared identifier 'elim_regs_3'
for ( i = 0LL; i <= 3 && ( elim_regs_3[i].from != 16 || *(int *)0x80D4C4[2 * i] != 6); ++i ) 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_nl_goto_receiver/src/stmt.c:4025:73: error: subscripted value is not an array, pointer, or vector
for ( i = 0LL; i <= 3 && ( elim_regs_3[i].from != 16 || *(int *)0x80D4C4[2 * i] != 6); ++i ) 
                                                                ~~~~~~~~^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_nl_goto_receiver/src/stmt.c:4029:1: error: no member named 'x_arg_pointer_save_area' in 'struct rtx_def'
arg_pointer_save_area = get_arg_pointer_save_area( cfun); 
^~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_nl_goto_receiver/src/function.h:533:38: note: expanded from macro 'arg_pointer_save_area'
#define arg_pointer_save_area (cfun->x_arg_pointer_save_area)
                               ~~~~  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_nl_goto_receiver/src/stmt.c:4030:19: error: no member named 'x_arg_pointer_save_area' in 'struct rtx_def'
v1 = copy_to_reg( arg_pointer_save_area); 
                  ^~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_nl_goto_receiver/src/function.h:533:38: note: expanded from macro 'arg_pointer_save_area'
#define arg_pointer_save_area (cfun->x_arg_pointer_save_area)
                               ~~~~  ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_nl_goto_receiver/src/obj/stmt.o] Error 1
